--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "buffer": "^6.0.3",
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.1.1",
