--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "firebase": "^11.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.7",
+    "react-spinners": "^0.15.0",
     "signature_pad": "^5.0.4",
     "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
